@@ -197,20 +197,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.11</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.12</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<argLine>-XX:MaxPermSize=128m -Xms128m -Xmx1024m</argLine>
-					<includes>
-						<include>**/*Test.class</include>
-					</includes>
-				</configuration>
+				<version>2.19.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
